mType/tests/testFiles/import/error/importMalformedBraces.mt
// Test: Malformed braces - missing comma between imports
import { ClassX ClassY } from "./modules/SomeModule.mt"

var obj = ClassX();
